--- a/Android/androiddev/app/src/main/res/layout/activity_mainpage.xml
+++ b/Android/androiddev/app/src/main/res/layout/activity_mainpage.xml
@@ -11,4 +11,25 @@
         android:paddingBottom="@dimen/activity_vertical_margin"
         tools:context="comxmausoleumx.httpsgithub.pairity.mainpage">
 
+    <Button
+            android:text="Create New Pairing"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true" android:layout_marginTop="19dp" android:id="@+id/createNewPairing"/>
+    <Button
+            android:text="Link to existing pairing"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:layout_below="@+id/createNewPairing"
+            android:layout_centerHorizontal="true" android:layout_marginTop="39dp" android:id="@+id/linkExistingButton"/>
+    <Button
+            android:text="Remove link"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:layout_below="@+id/linkExistingButton"
+            android:layout_centerHorizontal="true" android:layout_marginTop="35dp" android:id="@+id/removeLinkButton"/>
+    <Button
+            android:text="settings"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="59dp" android:id="@+id/settingsButton"
+            android:layout_alignParentBottom="true" android:layout_centerHorizontal="true"/>
 </RelativeLayout>
