--- a/Android/androiddev/app/src/main/res/layout/activity_create_new_pairing_page.xml
+++ b/Android/androiddev/app/src/main/res/layout/activity_create_new_pairing_page.xml
@@ -11,4 +11,21 @@
         android:paddingBottom="@dimen/activity_vertical_margin"
         tools:context="comxmausoleumx.httpsgithub.pairity.createNewPairingPage">
 
+    <TextView
+            android:text="/SD/Pics"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true" android:layout_marginTop="45dp" android:id="@+id/selectedPAth"/>
+    <Button
+            android:text="Browse"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:layout_below="@+id/selectedPAth"
+            android:layout_centerHorizontal="true" android:layout_marginTop="30dp" android:id="@+id/browseFoldersButton"/>
+    <Button
+            android:text="Create"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/createButton" android:layout_below="@+id/browseFoldersButton"
+            android:layout_alignLeft="@+id/browseFoldersButton" android:layout_alignStart="@+id/browseFoldersButton"
+            android:layout_marginTop="63dp"/>
 </RelativeLayout>
