--- a/Android/androiddev/app/src/main/res/layout/activity_link_existing_page.xml
+++ b/Android/androiddev/app/src/main/res/layout/activity_link_existing_page.xml
@@ -11,4 +11,18 @@
         android:paddingBottom="@dimen/activity_vertical_margin"
         tools:context="comxmausoleumx.httpsgithub.pairity.linkExistingPage">
 
+    <Button
+            android:text="Select Local Folder"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true" android:layout_alignParentStart="true" android:id="@+id/selectPhoneFolder"/>
+    <Button
+            android:text="Pair"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true" android:layout_alignParentEnd="true" android:id="@+id/connectButton"/>
+    <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true" android:layout_alignParentStart="true"/>
 </RelativeLayout>
