--- a/Android/androiddev/app/src/main/res/layout/activity_remove_link_page.xml
+++ b/Android/androiddev/app/src/main/res/layout/activity_remove_link_page.xml
@@ -11,4 +11,13 @@
         android:paddingBottom="@dimen/activity_vertical_margin"
         tools:context="comxmausoleumx.httpsgithub.pairity.removeLinkPage">
 
+    <Button
+            android:text="Remove Pairing"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true" android:layout_alignParentEnd="true" android:id="@+id/removeSelected"/>
+    <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true" android:layout_alignParentStart="true"/>
 </RelativeLayout>
